test commit to the submodule

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 version: '3'
-
+# a test file modification
 # SecureDNA env vars are picked up through `.env` in the repo root.
 
 x-environment: &keyserver-common-env
