moved docker-compose changes from old SecureDNA repo to current

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 version: '3'
-# a test file modification
 # SecureDNA env vars are picked up through `.env` in the repo root.
 
 x-environment: &keyserver-common-env
@@ -21,6 +20,8 @@ services:
     volumes:
       - "${TEST_CERTS_PATH:-./test/certs}:/certs/"
       - "${TEST_CFG_PATH:-./test/cfg}:/cfg/"
+    # - "./target/release/synthclient:/client/synthclient" # indended to mount locally built binary into Docker
+      - "./docker_client_output:/client" # json file is made visible outside of Docker
     environment:
       "SECUREDNA_CFG_PATH": "/cfg/synthesizer.toml"
   hdbserver:
