--- a/crates/doprf/Cargo.toml
+++ b/crates/doprf/Cargo.toml
@@ -11,6 +11,8 @@ centralized_keygen = []
 wasm = ["getrandom/wasm-bindgen"]
 
 [dependencies]
+# added dependencies
+serde_json = "1.0"
 base64 = "0.22.0"
 base64_helper = { path = "../base64_helper" }
 clap = { version = "4.5.0", features = ["derive"] }
