added the blinding to the proof. Required changes to cargo.toml files to include Query type in hash_proof. As well gcp restart seems to have forced me to chagne the port in the docker-compose.yml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = [
     "crates/wasm_bindings/quickdna",
     "crates/wasm_bindings/screening",
     "hash_proof/program",
-    "hash_proof/script"
+    "hash_proof/script",
 ]
 resolver = "2"
 
