--- a/hash_proof/program/Cargo.toml
+++ b/hash_proof/program/Cargo.toml
@@ -9,3 +9,4 @@ curve25519-dalek = {workspace = true, features = ["digest", "rand_core"]}
 alloy-sol-types = { workspace = true }
 sp1-zkvm = "3.0.0-rc4"
 fibonacci-lib = { path = "../lib" }
+doprf = { path = "../../crates/doprf", default-features = false }
