--- a/crates/doprf/Cargo.toml
+++ b/crates/doprf/Cargo.toml
@@ -9,12 +9,13 @@ edition = "2021"
 default = ["centralized_keygen"]
 centralized_keygen = []
 wasm = ["getrandom/wasm-bindgen"]
+sp1 = ["sp1-sdk"]
 
 [dependencies]
 # added dependencies
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 # SP1 'script dependencies'
-sp1-sdk = "3.0.0"
+sp1-sdk = { version = "3.0.0", optional = true }
 tracing = "0.1.40"
 
 base64 = "0.22.0"
