--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,5 @@ overflow-checks = true
 
 [patch.crates-io]
 wasm-bindgen = { git = "https://github.com/lynn/wasm-bindgen.git", branch = "securedna" }
+sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "sha3-v0.10.8-patch-v1" }
+curve25519-dalek = { git = "https://github.com/sp1-patches/curve25519-dalek", tag = "curve25519_dalek-v4.1.3-patch-v1" }
