--- a/crates/doprf_client/Cargo.toml
+++ b/crates/doprf_client/Cargo.toml
@@ -8,11 +8,10 @@ edition = "2021"
 [features]
 default = ["centralized_keygen"]
 centralized_keygen = []
-sp1 = ["sp1-sdk"]
 
 [dependencies]
 # SP1 'script dependencies'
-sp1-sdk = { version = "3.0.0", optional = true}
+sp1-sdk = { version = "3.0.0" }
 again = { workspace = true }
 async-trait = "0.1.73"
 bytes = "1"
@@ -28,7 +27,6 @@ tokio = { version = "1", default-features = false }
 tracing = { workspace = true }
 
 certificates = { path = "../certificates" }
-incorporate = { path = "../incorporate", default-features = false}
 doprf = { path = "../doprf", default-features = false}
 http_client = { path = "../http_client", default-features = false}
 packed_ristretto = { path = "../packed_ristretto", default-features = false }
