--- a/crates/http_client/Cargo.toml
+++ b/crates/http_client/Cargo.toml
@@ -20,8 +20,8 @@ shared_types = { path = "../shared_types" }
 format_serde_error = { version = "0.3.0", default-features = false, features = ["serde_json", "graphemes_support"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-# reqwest = { version = "0.12.5", features = ["cookies", "json"] }
-# tracing.workspace = true
+reqwest = { version = "0.12.5", features = ["cookies", "json"] }
+tracing.workspace = true
 
 streamed_ristretto = { path = "../streamed_ristretto", features = ["reqwest"] }
 
