--- a/crates/doprf_client/Cargo.toml
+++ b/crates/doprf_client/Cargo.toml
@@ -27,7 +27,7 @@ tokio = { version = "1", default-features = false }
 tracing = { workspace = true }
 
 certificates = { path = "../certificates" }
-doprf = { path = "../doprf", default-features = false}
+doprf = { path = "../doprf", default-features = true, features = ["sp1"] }
 http_client = { path = "../http_client", default-features = false}
 packed_ristretto = { path = "../packed_ristretto", default-features = false }
 quickdna = { workspace = true, default-features = false }
