--- a/crates/hdbserver/Cargo.toml
+++ b/crates/hdbserver/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
-bytes = "1.6.0"
+bytes = "1.10.0"
 clap = { version = "4.5.0", features = ["cargo", "derive", "env"] }
 form_urlencoded = "1.2.0"
 futures = "0.3.28"
@@ -27,7 +27,8 @@ tracing-subscriber = { workspace = true }
 yubico = { version = "0.11.0" }
 
 certificates = { path = "../certificates" }
-doprf = { path = "../doprf" }
+doprf = { path = "../doprf", features = ["sp1"] }
+packed_ristretto = { path = "../packed_ristretto" }
 hdb = { path = "../hdb" }
 minhttp = { path = "../minhttp" }
 persistence = { path = "../persistence" }
@@ -36,6 +37,7 @@ scep_server_helpers = { path = "../scep_server_helpers" }
 securedna_versioning = { path = "../securedna_versioning" }
 shared_types = { path = "../shared_types", features = ["http"] }
 streamed_ristretto = { path = "../streamed_ristretto", features = ["hyper"] }
+sp1-sdk = { version = "3.0.0" }
 
 [dev-dependencies]
 tempfile = { workspace = true }
