--- a/crates/scep_client_helpers/Cargo.toml
+++ b/crates/scep_client_helpers/Cargo.toml
@@ -9,17 +9,19 @@ publish.workspace = true
 
 [dependencies]
 certificates = { path = "../certificates" }
-doprf = { path = "../doprf" }
+doprf = { path = "../doprf", features = ["sp1"] }
 http_client = { path = "../http_client" }
 packed_ristretto = { path = "../packed_ristretto", default-features = false }
 scep = { path = "../scep" }
 shared_types = { path = "../shared_types", default-features = false }
+serde = { version = "1.0", features = ["derive"] }
 
 anyhow = "1.0.75"
 bytes = "1.6.0"
 cookie = "0.18.0"
 include_dir = "0.7.3"
 once_cell = "1.19.0"
+
 serde_json = "1"
 thiserror = "1.0.47"
 tracing = { workspace = true }
